adding more content 6

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -13,7 +13,7 @@ Kiedy zmieniasz pliki, Git rozpoznaje je jako zmodyfikowane, ponieważ różnią
 
 Sprawdzanie stanu twoich plików
 
-Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie git status. Jeśli uruchomisz je bezpośrednio po sklonowaniu repozytorium, zobaczysz wynik podobny do poniższego:
+Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie **git status**. Jeśli uruchomisz je bezpośrednio po sklonowaniu repozytorium, zobaczysz wynik podobny do poniższego:
 
 `git status`{{execute}}
 
@@ -131,6 +131,7 @@ Tworzymy nowy plik
 `touch .gitignore`{{execute}}
 
 Umieszczamy w nim wyrażanie *.tmp
+
 `echo "*.tmp" >.gitignore`{{execute}}
 
 
