adding more content 7

--- a/git-course/030.git-init.md
+++ b/git-course/030.git-init.md
@@ -124,7 +124,8 @@ Poniższe przykłady operują bardzo prostym, demonstracyjnym projekcie o nazwie
 
 `git clone https://github.com/schacon/simplegit-progit ~/simplegit-progit`{{execute}}
 
-`cd ~/~/simplegit-progit'{{execute}}
+Przechodzimy do katalogu z projektem
+`cd ~/simplegit-progit`{{execute}}
 
 Jeśli teraz uruchomisz na sklonowanym repozytorium polecenie **git log**, uzyskasz mniej więcej coś takiego:
 
@@ -156,6 +157,7 @@ Duża liczba opcji polecenia git log oraz ich różnorodność pozwalają na dok
 Jedną z najprzydatniejszych opcji jest -p. Pokazuje ona różnice wprowadzone z każdą rewizją. Dodatkowo możesz użyć opcji -2 aby ograniczyć zbiór do dwóch ostatnich wpisów:
 
 `git log -p -2`{{execute}}
+
 <pre>
 commit ca82a6dff817ec66f44342007202690a93763949
 Author: Scott Chacon <schacon@gee-mail.com>
@@ -248,7 +250,7 @@ a11bef06a3f659402fe7563abf99ad00de2209e6 first commit
 
 Najbardziej interesująca jest tutaj jednak opcja format. Pozwala ona określić własny wygląd i format informacji wyświetlanych poleceniem log. Funkcja przydaje się szczególnie podczas generowania tychże informacji do dalszego, maszynowego przetwarzania - ponieważ sam definiujesz ściśle format, wiesz, że nie zmieni się on wraz z kolejnymi wersjami Gita:
 
-``git log --pretty=format:"%h - %an, %ar : %s"`{{execute}}
+`git log --pretty=format:"%h - %an, %ar : %s"`{{execute}}
 
 ca82a6d - Scott Chacon, 6 years ago : changed the version number
 085bb3b - Scott Chacon, 6 years ago : removed unnecessary test
