adding more content 8

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -1,5 +1,9 @@
 ## Git status
 
+Wewnątrz  katalogu ~/demo pojawił się nowy plik **index.html**
+
+`cd ~/demo`{{execute}}
+
 Rejestrowanie zmian w repozytorium
 
 Posiadasz już repozytorium Gita i ostatnią wersję lub kopię roboczą wybranego projektu. Za każdym razem, kiedy po naniesieniu zmian projekt osiągnie stan, który chcesz zapamiętać, musisz nowe wersje plików zatwierdzić w swoim repozytorium.
@@ -17,7 +21,7 @@ Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie **git s
 
 `git status`{{execute}}
 
-Powiedzmy, że dodajesz do repozytorium nowy, prosty plik index.html. Jeżeli nie istniał on wcześniej, po uruchomieniu git status zobaczysz go jako plik nieśledzony, jak poniżej:
+Powiedzmy, że dodajesz do repozytorium nowy, prosty plik **index.html**. Jeżeli nie istniał on wcześniej, po uruchomieniu git status zobaczysz go jako plik nieśledzony, jak poniżej:
 
 <pre>
 On branch master
@@ -125,7 +129,7 @@ Możesz użyć dwóch gwiazdek aby dopasować katalogi zagnieżdżone; a/**/z wo
 Przykład uzupełnienia pliku .gitignore o pliki  o nazwie *.tmp
 
 
-Plik powinien być uzupełniony w repozytorium kodu
+Plik powinien być uzupełniony w repozytorium  tak jak zwykłe pliki zawierające nasz kod źródłowy.
 
 Tworzymy nowy plik
 `touch .gitignore`{{execute}}
