--- a/git-course/010.git-init.md
+++ b/git-course/010.git-init.md
@@ -8,13 +8,17 @@ Można to zrobić jednym poleceniem:
 
 `git init ~/demo`{{execute}}
 
-Rozbijmy to polecenia na kilka składowych:
+
+Rozbijmy jednak to polecenie na kilka składowych:
 
 Utworzenie podkatalogu o nazwie demo
 `mkdir -p ~/demo`{{execute}}
 
 Zmiana katalogu bieżącego
 `cd ~/demo`{{execute}}
+
+**Od tego momentu wszelkie polecenia git muszą być wykonywane wewnątrz repozytorium.**
+W tym przypadku jest to katalog ~/demo
 
 Utworzenie pustego repozytorium
 `git init`{{execute}}
@@ -33,9 +37,13 @@ Pierwszą rzeczą, którą powinieneś zrobić po instalacji Git jest ustawienie
 Jeśli skorzystasz z opcji --global wystarczy, że taka konfiguracja zostanie dokonana jednorazowo. Git skorzysta z niej podczas każdej operacji wykonywanej przez Ciebie w danym systemie. Jeśli zaistnieje potrzeba zmiany tych informacji dla konkretnego projektu, można skorzystać z git config bez opcji --global.
 
 Wiele graficznych narzędzi pomoże Ci jeśli uruchomisz je po raz pierwszy.
-Edytor
+
+Wybór edytor
+
 
 Teraz, gdy ustaliłeś swą tożsamość, możesz skonfigurować domyślny edytor tekstu, który zostanie uruchomiony, gdy Git będzie wymagał wprowadzenia jakiejś informacji tekstowej. Domyślnie Git skorzysta z domyślnego edytora systemowego, którym zazwyczaj jest Vi lub Vim. Jeśli wolisz korzystać z innego edytora, np. z nano, uruchom następujące polecenie:
 
 `git config --global core.editor nano`{{execute}}
 
+
+Warunkiem ukończenia tej części jest utworzenie pustego repozytorium git  ~/demo/ lub ~/tutorial/demo/
