adding more content 9

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -1,14 +1,21 @@
 ## Git status
 
+Rejestrowanie zmian w repozytorium
+
 Wewnątrz  katalogu ~/demo pojawił się nowy plik **index.html**
 
 `cd ~/demo`{{execute}}
 
-Rejestrowanie zmian w repozytorium
+Zobaczmy co jest w środku:
+
+`ls -la`{{execute}}
+
+
+Zacznijmy od garści teorii.
 
 Posiadasz już repozytorium Gita i ostatnią wersję lub kopię roboczą wybranego projektu. Za każdym razem, kiedy po naniesieniu zmian projekt osiągnie stan, który chcesz zapamiętać, musisz nowe wersje plików zatwierdzić w swoim repozytorium.
 
-Pamiętaj, że każdy plik w twoim katalogu roboczym może być w jednym z dwóch stanów: śledzony lub nieśledzony. Śledzone pliki to te, które znalazły się w ostatniej migawce; mogą być niezmodyfikowane, zmodyfikowane lub oczekiwać w poczekalni. Nieśledzone pliki to cała reszta — są to jakiekolwiek pliki w twoim katalogu roboczym, które nie znalazły się w ostatniej migawce i nie znajdują się w poczekalni, gotowe do zatwierdzenia. Początkowo, kiedy klonujesz repozytorium, wszystkie twoje pliki będą śledzone i niezmodyfikowane, ponieważ dopiero co zostały wybrane i nie zmieniałeś jeszcze niczego.
+Pamiętaj, że każdy plik w twoim katalogu roboczym może być w jednym z dwóch stanów: **śledzony** lub **nieśledzony**. Śledzone pliki to te, które znalazły się w ostatniej migawce; mogą być niezmodyfikowane, zmodyfikowane lub oczekiwać w poczekalni. Nieśledzone pliki to cała reszta — są to jakiekolwiek pliki w twoim katalogu roboczym, które nie znalazły się w ostatniej migawce i nie znajdują się w poczekalni, gotowe do zatwierdzenia. Początkowo, kiedy klonujesz repozytorium, wszystkie twoje pliki będą śledzone i niezmodyfikowane, ponieważ dopiero co zostały wybrane i nie zmieniałeś jeszcze niczego.
 
 Kiedy zmieniasz pliki, Git rozpoznaje je jako zmodyfikowane, ponieważ różnią się od ostatniej zatwierdzonej zmiany. Zmodyfikowane pliki umieszczasz w poczekalni, a następnie zatwierdzasz oczekujące tam zmiany i tak powtarza się cały cykl.
 
@@ -17,7 +24,7 @@ Kiedy zmieniasz pliki, Git rozpoznaje je jako zmodyfikowane, ponieważ różnią
 
 Sprawdzanie stanu twoich plików
 
-Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie **git status**. Jeśli uruchomisz je bezpośrednio po sklonowaniu repozytorium, zobaczysz wynik podobny do poniższego:
+Podstawowe narzędzie używane do sprawdzenia stanu plików to polecenie **git status**. Jeśli uruchomisz je bezpośrednio po sklonowaniu lub utworzeniu repozytorium, zobaczysz wynik podobny do poniższego:
 
 `git status`{{execute}}
 
