adding more content 10

--- a/git-course/010.git-init.md
+++ b/git-course/010.git-init.md
@@ -6,7 +6,7 @@ Utwórz pierwsze puste repozytorium
 
 Można to zrobić jednym poleceniem:
 
-`git init ~/demo`{{execute}}
+`git init ~/demo`{{copy}}
 
 
 Rozbijmy jednak to polecenie na kilka składowych:
@@ -18,6 +18,7 @@ Zmiana katalogu bieżącego
 `cd ~/demo`{{execute}}
 
 **Od tego momentu wszelkie polecenia git muszą być wykonywane wewnątrz repozytorium.**
+
 W tym przypadku jest to katalog ~/demo
 
 Utworzenie pustego repozytorium
@@ -38,12 +39,18 @@ Jeśli skorzystasz z opcji --global wystarczy, że taka konfiguracja zostanie do
 
 Wiele graficznych narzędzi pomoże Ci jeśli uruchomisz je po raz pierwszy.
 
-Wybór edytor
+Wybór edytora
 
 
 Teraz, gdy ustaliłeś swą tożsamość, możesz skonfigurować domyślny edytor tekstu, który zostanie uruchomiony, gdy Git będzie wymagał wprowadzenia jakiejś informacji tekstowej. Domyślnie Git skorzysta z domyślnego edytora systemowego, którym zazwyczaj jest Vi lub Vim. Jeśli wolisz korzystać z innego edytora, np. z nano, uruchom następujące polecenie:
 
+
+
 `git config --global core.editor nano`{{execute}}
+
+Można też wybrać bardziej zaawansowany emacs
+
+`git config --global core.editor emacs`{{copy}}
 
 
 Warunkiem ukończenia tej części jest utworzenie pustego repozytorium git  ~/demo/ lub ~/tutorial/demo/
