adding more content 11

--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -186,3 +186,9 @@ Changes to be committed:
 On branch master
 nothing to commit, working directory clean
 </pre>
+
+
+Warunkiem ukończenia tej części jest utworzenie dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
+
+pliku .gitignore
+
