--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -188,7 +188,7 @@ nothing to commit, working directory clean
 </pre>
 
 
-Warunkiem ukończenia tej części jest utworzenie dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
+Warunkiem ukończenia tej części jest utworzenie i dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
 
 pliku .gitignore
 
