--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -187,6 +187,21 @@ On branch master
 nothing to commit, working directory clean
 </pre>
 
+Sprawdzmy jak to działa w praktyce
+
+Dodajmy plik z nazwą, która powinna być ignorowana przez repozytorium.
+`touch plik1.tmp'{{execute}}
+
+Sprawdzmy czy plik znajduje się w katalogu
+`ls -la'{{execute}}
+
+
+Polecenie
+'git status'{{execute}}
+
+nie pokazuje żadnych danych dotyczących nowego pliku.
+
+
 
 Warunkiem ukończenia tej części jest utworzenie i dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
 
