--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -190,14 +190,16 @@ nothing to commit, working directory clean
 Sprawdzmy jak to działa w praktyce
 
 Dodajmy plik z nazwą, która powinna być ignorowana przez repozytorium.
-`touch plik1.tmp'{{execute}}
+
+`touch plik1.tmp`{{execute}}
 
 Sprawdzmy czy plik znajduje się w katalogu
-`ls -la'{{execute}}
+
+`ls -la`{{execute}}
 
 
 Polecenie
-'git status'{{execute}}
+`git status`{{execute}}
 
 nie pokazuje żadnych danych dotyczących nowego pliku.
 
