--- a/git-course/020.git-init.md
+++ b/git-course/020.git-init.md
@@ -197,15 +197,27 @@ Sprawdzmy czy plik znajduje się w katalogu
 
 `ls -la`{{execute}}
 
+<pre>
+drwxr-xr-x 3 root root 4096 Aug  7 16:37 .
+drwx------ 5 root root 4096 Aug  7 16:37 ..
+drwxr-xr-x 8 root root 4096 Aug  7 16:37 .git
+-rw-r--r-- 1 root root    6 Aug  7 16:37 .gitignore
+-rw-r--r-- 1 root root   47 Aug  7 16:37 index.html
+-rw-r--r-- 1 root root    0 Aug  7 16:37 plik1.tmp
+</pre>
 
 Polecenie
 `git status`{{execute}}
+
+<pre>
+On branch master
+nothing to commit, working directory clean
+</pre>
 
 nie pokazuje żadnych danych dotyczących nowego pliku.
 
 
 
-Warunkiem ukończenia tej części jest utworzenie i dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
-
-pliku .gitignore
+**Warunkiem ukończenia tej części jest utworzenie i dodanie  do repozytorium git  ~/demo/ lub ~/tutorial/demo/
+pliku .gitignore**
 
