--- a/git-course/030.git-init.md
+++ b/git-course/030.git-init.md
@@ -7,7 +7,7 @@ Podgląd zmian w poczekalni i poza nią
 
 Jeśli polecenie **git status** jest dla ciebie zbyt nieprecyzyjne — chcesz wiedzieć, co dokładnie zmieniłeś, nie zaś, które pliki zostały zmienione — możesz użyć polecenia **git diff**. W szczegółach zajmiemy się nim później; prawdopodobnie najczęściej będziesz używał go aby uzyskać odpowiedź na dwa pytania: Co zmieniłeś, ale jeszcze nie trafiło do poczekalni? Oraz, co znajduje się już w poczekalni, a co za chwilę zostanie zatwierdzone? Choć **git status** bardzo ogólnie odpowiada na oba te pytania, **git diff** pokazuje, które dokładnie linie zostały dodane, a które usunięte — w postaci łatki.
 
-Powiedzmy, że zmieniłeś i ponownie dodałeś do poczekalni plik README, a następnie zmodyfikowałeś plik CONTRIBUTING.md, jednak bez umieszczania go wśród oczekujących. Jeśli uruchomisz teraz polecenie status, zobaczysz coś podobnego:
+Powiedzmy, że  dodałeś do poczekalni plik **README**, a następnie zmodyfikowałeś plik **index.html**, jednak bez umieszczania go wśród oczekujących. Jeśli uruchomisz teraz polecenie status, zobaczysz coś podobnego:
 <pre>
 $ git status
 On branch master
@@ -26,6 +26,7 @@ Aby zobaczyć, co zmieniłeś ale nie wysłałeś do poczekalni, wpisz **git dif
 
 
 `git diff`{{execute}}
+
 <pre>
 diff --git a/CONTRIBUTING.md b/CONTRIBUTING.md
 index 8ebb991..643e24f 100644
