--- a/git-course/030.git-init.md
+++ b/git-course/030.git-init.md
@@ -5,43 +5,46 @@
 
 Podgląd zmian w poczekalni i poza nią
 
+Wewnątrz repozytorium pojawił się nowy plik README i zmodyfikowany index.html
+
+`cd ~demo`{{execute}}
+
+`ls -la`{{execute}}
+
 Jeśli polecenie **git status** jest dla ciebie zbyt nieprecyzyjne — chcesz wiedzieć, co dokładnie zmieniłeś, nie zaś, które pliki zostały zmienione — możesz użyć polecenia **git diff**. W szczegółach zajmiemy się nim później; prawdopodobnie najczęściej będziesz używał go aby uzyskać odpowiedź na dwa pytania: Co zmieniłeś, ale jeszcze nie trafiło do poczekalni? Oraz, co znajduje się już w poczekalni, a co za chwilę zostanie zatwierdzone? Choć **git status** bardzo ogólnie odpowiada na oba te pytania, **git diff** pokazuje, które dokładnie linie zostały dodane, a które usunięte — w postaci łatki.
 
 Powiedzmy, że  dodałeś do poczekalni plik **README**, a następnie zmodyfikowałeś plik **index.html**, jednak bez umieszczania go wśród oczekujących. Jeśli uruchomisz teraz polecenie status, zobaczysz coś podobnego:
+
+`git status`{{execute}}
+
 <pre>
-$ git status
+
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)
 
-    new file:   README
+        new file:   README
 
 Changes not staged for commit:
   (use "git add <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)
 
-    modified:   CONTRIBUTING.md
+        modified:   index.html
 </pre>
+
 Aby zobaczyć, co zmieniłeś ale nie wysłałeś do poczekalni, wpisz **git diff** bez żadnych argumentów:
 
 
 `git diff`{{execute}}
 
 <pre>
-diff --git a/CONTRIBUTING.md b/CONTRIBUTING.md
-index 8ebb991..643e24f 100644
---- a/CONTRIBUTING.md
-+++ b/CONTRIBUTING.md
-@@ -65,7 +65,8 @@ branch directly, things can get messy.
- Please include a nice description of your changes when you submit your PR;
- if we have to read the whole diff to figure out why you're contributing
- in the first place, you're less likely to get feedback and have your change
--merged in.
-+merged in. Also, split your changes into comprehensive chunks if you patch is
-+longer than a dozen lines.
-
- If you are starting to work on a particular area, feel free to submit a PR
- that highlights your work in progress (and note in the PR title that it's
+diff --git a/index.html b/index.html
+index 7a1a5c9..e1e3055 100644
+--- a/index.html
++++ b/index.html
+@@ -1 +1 @@
+-<html><title>Title</title><body></body></html>
++<html><title>Title 2</title><body></body></html>
 </pre>
 
 Powyższe polecenie porównuje zawartość katalogu roboczego z tym, co znajduje się w poczekalni. Wynik pokaże ci te zmiany, które nie trafiły jeszcze do poczekalni.
@@ -49,22 +52,23 @@ Powyższe polecenie porównuje zawartość katalogu roboczego z tym, co znajduje
 Jeśli chcesz zobaczyć zawartość poczekalni, która trafi do repozytorium z najbliższym zatwierdzeniem, możesz użyć polecenia **git diff --staged**. To polecenie porówna zmiany z poczekalni z ostatnią zmianą:
 
 `git diff --staged`{{execute}}
+
 <pre>
 diff --git a/README b/README
 new file mode 100644
-index 0000000..03902a1
+index 0000000..88fdefe
 --- /dev/null
 +++ b/README
 @@ -0,0 +1 @@
-+My Project
++README VERSION 1
 </pre>
 
 Istotnym jest, że samo polecenie git diff nie pokazuje wszystkich zmian dokonanych od ostatniego zatwierdzenia — ­jedynie te, które nie trafiły do poczekalni. Może być to nieco mylące, ponieważ jeżeli wszystkie twoje zmiany są już w poczekalni, wynik git diff będzie pusty.
 
-Jeszcze jeden przykład — jeżeli wyślesz do poczekalni plik CONTRIBUTING.md, a następnie zmodyfikujesz go ponownie, możesz użyć git status, by obejrzeć zmiany znajdujące się w poczekalni, jak i te poza nią:
+Jeszcze jeden przykład — jeżeli wyślesz do poczekalni plik index.html, a następnie zmodyfikujesz go ponownie, możesz użyć git status, by obejrzeć zmiany znajdujące się w poczekalni, jak i te poza nią:
 
-$ git add CONTRIBUTING.md
-$ echo 'test line' >> CONTRIBUTING.md
+`git add index.html`{{execute}}
+`echo "<html><title>Title 3</title><body></body></html>" > index.html`{{execute}}
 
 `git status`{{execute}}
 <pre>
