adding clear.sh

--- a/git-course/000.intro.md
+++ b/git-course/000.intro.md
@@ -1,2 +1,9 @@
-Podstawy gita
+Podstawy Gita
+
+Przeznaczone dla osób, które nie miały do tej pory do czynienia  Git.
+
+Nie jest wymagana wiedza programistyczna.
+
+Wewnątrz znajdują się laboratoria, który umożliwiają ćwiczenia bez instalacji narzędzi na stacji roboczej.
+
 
