adding branch name in prompt

--- a/git-course/030.git-init.md
+++ b/git-course/030.git-init.md
@@ -7,7 +7,7 @@ Podgląd zmian w poczekalni i poza nią
 
 Wewnątrz repozytorium pojawił się nowy plik README i zmodyfikowany index.html
 
-`cd ~demo`{{execute}}
+`cd ~/demo`{{execute}}
 
 `ls -la`{{execute}}
 
@@ -130,11 +130,13 @@ Poniższe przykłady operują bardzo prostym, demonstracyjnym projekcie o nazwie
 `git clone https://github.com/schacon/simplegit-progit ~/simplegit-progit`{{execute}}
 
 Przechodzimy do katalogu z projektem
+
 `cd ~/simplegit-progit`{{execute}}
 
 Jeśli teraz uruchomisz na sklonowanym repozytorium polecenie **git log**, uzyskasz mniej więcej coś takiego:
 
 `git log`{{execute}}
+
 <pre>
 commit ca82a6dff817ec66f44342007202690a93763949
 Author: Scott Chacon <schacon@gee-mail.com>
@@ -263,6 +265,7 @@ a11bef0 - Scott Chacon, 6 years ago : first commit
 
 Useful options for **git log --pretty=format** pokazuje najprzydatniejsze opcje akceptowane przez format.
 Table 1. Useful options for git log --pretty=format 
+
 |Opcja |Opis|
 |-----|---------------|
 |%H|hash commita|
